# MIL-Mech-Team

./: .gitattributes  README.md
MIL/Reference/NaviGator CAD/: NaviGator AMS Full Assembly.SLDASM  Part Numbers.xlsx
MIL/Reference/NaviGator CAD/Camera/: 1008539394lift_pitch.ppt  91290A115_BLACK-OXIDE CLASS 12.9 SOCKET HEAD CAP SCREW.SLDPRT  CML05-Solidworks.sldprt  Camera Assembled.SLDASM  Camera Mount V2.SLDPRT  Camera Payload V2.SLDASM  Kip_BFLY-U3-23S6C-C.SLDPRT  Kip_Camera_Mount_v2.SLDPRT  Kip_Camera_Payload.SLDASM  Lens.SLDPRT  WTE2-M-FLANGE-SEAL-R1.SLDPRT  WTE2-P-END-CAP-2X10MM-R1.SLDPRT  (+2 more)
MIL/Reference/NaviGator CAD/Camera Shade/: 80-20 Extrusion back camera shade.SLDPRT  80-20 Extrusion front camera shade.SLDPRT  Acrylic plate for shade.SLDPRT
MIL/Reference/NaviGator CAD/Camera mount 2018/: Assem2.SLDASM  Lens holder.SLDPRT  See3CAM_CU20 lens.SLDPRT  See3CAM_CU20.SLDASM  new camera mount navigator.STL  new mount.SLDPRT
MIL/Reference/Reference/RoboNation/SubjuGator/2022/Tasks/Assm_Collecting_Bin_UDRF/: CMakeLists.txt  package.xml
MIL/Reference/Reference/RoboNation/SubjuGator/2022/Tasks/Assm_Collecting_Bin_UDRF/launch/: display.launch  gazebo.launch
MIL/Reference/Reference/RoboNation/SubjuGator/2022/Tasks/Assm_Collecting_Bin_UDRF/meshes/: base_link.STL
MIL/Reference/Reference/RoboNation/SubjuGator/2022/Tasks/Assm_Collecting_Bin_UDRF/urdf/: Assm_Collecting_Bin_UDRF.csv  Assm_Collecting_Bin_UDRF.urdf
MIL/Subjugator 8 CAD/Subjugator 8 CAD/: Sub8_SubjuGator8_2020.SLDASM
MIL/Subjugator 9 CAD/Subjugator 9 CAD/: Sub 9 Full Assembly_project_folders.html
(+2554 files in other folders)
